# SonyBridge

./: README.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml
Client/: BluetoothWrapper.cpp  BluetoothWrapper.h  CMakeLists.txt  CommandSerializer.cpp  CommandSerializer.h  Constants.h  CrossPlatformGUI.cpp  CrossPlatformGUI.h  Headphones.cpp  Headphones.h  IBluetoothConnector.h
Client/linux/: LinuxBluetoothConnector.cpp  LinuxBluetoothConnector.h  LinuxGUI.cpp
Client/macos/: ContentView.swift  HeadphonesBridge.h  HeadphonesBridge.mm  HeadphonesModel.swift  MacOSBluetoothConnector.h  MacOSBluetoothConnector.mm  SonyHeadphonesClient-Bridging-Header.h  ViewController.h  ViewController.mm
Client/macos/Assets.xcassets/linkbuds-s.imageset/: Contents.json
Client/macos/Assets.xcassets/mdr-xb950bt.imageset/: Contents.json
Client/macos/Assets.xcassets/wf-1000xm4.imageset/: Contents.json
Client/macos/Assets.xcassets/wf-1000xm5.imageset/: Contents.json
Client/macos/Assets.xcassets/wf-c700n.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-1000xm2.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-1000xm3.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-1000xm4.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-1000xm5.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-1000xm6.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-ch520.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-ch720n.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-xb900n.imageset/: Contents.json
Client/macos/Assets.xcassets/wh-xb910n.imageset/: Contents.json
Client/macos/SonyHeadphonesClient.xcodeproj/: project.pbxproj
Client/windows/: WindowsBluetoothConnector.cpp  WindowsBluetoothConnector.h
docs/: index.html
